@@ -4,6 +4,9 @@ Development Progress	:
 ---------------------------
 
 2012-09-17 (SVN):
+    * utils, hcc: corrected the -old option description.
+
+2012-09-17 (SVN):
     * amiga, Sys_FindFirstFile(): unlock the lock created for path in
       Sys_FindClose().
     * updated version date stamp to 2012-09-17.
